# hector_recorder

./: .gitignore  README.md
hector_recorder/: CMakeLists.txt  package.xml
hector_recorder/config/: default.yaml  example_athena.yaml
hector_recorder/env_hooks/: 50.scripts.bash.in
hector_recorder/include/hector_recorder/: arg_parser.hpp  config_yaml.h  recorder_node.hpp  service_handlers.h  terminal_ui.hpp  throttle_config.hpp  topic_information.hpp  utils.h
hector_recorder/include/hector_recorder/modified/: recorder_impl.hpp
hector_recorder/scripts/: hector_recorder_completion.bash
hector_recorder/src/: arg_parser.cpp  config_yaml.cpp  main.cpp  main_headless.cpp  recorder_node.cpp  service_handlers.cpp  terminal_ui.cpp  utils.cpp
hector_recorder/src/modified/: recorder_impl.cpp
hector_recorder/test/: test_recorder_node.cpp  test_utils.cpp
hector_recorder_msgs/: CMakeLists.txt  package.xml
hector_recorder_msgs/msg/: BagInfo.msg  BagTopicInfo.msg  RecorderStatus.msg  TopicInfo.msg
hector_recorder_msgs/srv/: ApplyConfig.srv  DeleteBag.srv  GetAvailableServices.srv  GetAvailableTopics.srv  GetBagDetails.srv  GetConfig.srv  GetPresetConfig.srv  GetRecorderInfo.srv  ListBags.srv  PauseRecording.srv  ResumeRecording.srv  SaveConfig.srv  SplitBag.srv  StartRecording.srv  StopRecording.srv
rqml_recorder/: CMakeLists.txt  package.xml  register_qml_module.dsv.in  rqml_plugins.yaml.in
rqml_recorder/qml/: BagPlayer.qml  BagViewer.qml  RecorderManager.qml  utils.js
rqml_recorder/qml/elements/: BagBrowser.qml  ConfigEditor.qml  PlaybackPanel.qml  TopicTable.qml
rqml_recorder/qml/interfaces/: BagProviderInterface.qml  LocalRecorderInterface.qml  RecorderInterface.qml
rqml_recorder/src/: bag_player_engine.cpp  bag_player_engine.hpp  bag_recorder_engine.cpp  bag_recorder_engine.hpp  bag_transfer.cpp  bag_transfer.hpp  local_bag_scanner.cpp  local_bag_scanner.hpp  preset_store.cpp  preset_store.hpp
rqml_recorder/test/: Utils.qml  test_plugins.cpp  tst_BagBrowser.qml  tst_BagPlayer.qml  tst_BagTransfer.qml  tst_ConfigEditor.qml  tst_LocalRecorderInterface.qml  tst_PlaybackPanel.qml  tst_RecorderInterface.qml  tst_RecorderManager.qml  tst_TopicTable.qml  tst_Utils.qml
rqml_recorder/test/mocks/RQml/Recorder/: BagPlayerEngine.qml  BagRecorderEngine.qml  BagTransfer.qml  LocalBagScanner.qml  qmldir
rqml_recorder/test/mocks/Ros2/: Subscription.qml  qmldir
rqml_recorder/test/mocks/RqmlRecorder/: BagTransfer.qml  PresetStore.qml
