<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqml_recorder</name>
  <version>0.1.0</version>
  <description>RQML plugin for controlling and monitoring hector_recorder instances</description>
  <maintainer email="lichtenfeld@sim.tu-darmstadt.de">Jonathan Lichtenfeld</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rqml_core</depend>
  <depend>hector_recorder_msgs</depend>
  <depend>rosbag2_storage</depend>

  <build_depend>qt6-base-dev</build_depend>
  <build_depend>qt6-declarative-dev</build_depend>

  <exec_depend>qml6-module-qtquick-controls</exec_depend>
  <exec_depend>qml6-module-qtquick-layouts</exec_depend>
  <exec_depend>qml6_ros2_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
